--- a/Documentation.tex
+++ b/Documentation.tex
@@ -5,7 +5,7 @@
 \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{setspace}
-\setstretch{1.15}
+\setstretch{1.13}
 \graphicspath{ {./Assets/} }
 
 
@@ -21,17 +21,21 @@
   \maketitle
 
   \begin{abstract}
-    lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-    enim ad minim veniam, quis nostrud exercitation ullamco laboris
-    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-    reprehenderit in voluptate velit esse cillum dolore eu fugiat
-    nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-    sunt in culpa qui officia deserunt mollit anim id est laborum.
+    Planning for a holiday is a task which nowadays is associated with
+    online planning and research. This paper will construct together a
+    system which tries to automate the whole process. Given the
+    increase in the amount of time each person spends posting on
+    social media, the solution is aimed towards gathering the user’s
+    preferences from his profile’s images automatically using current
+    machine learning technologies. The paper then aims in using such
+    information in generating an itinerary filled with activities to
+    which the user’s needs are met without the whole process of asking
+    numerous questions.
   \end{abstract}
 
   \begin{IEEEkeywords}
-  tourism,itinerary, user-profiling.
+    Automatic User Profiling, AI planning, Tourist Planner, Trip itinerary 
+
   \end{IEEEkeywords}
 
   \section{Introduction}
